[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Giulia Carra <giulia.carra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
streamlit = "^1.41.1"
geopandas = "^1.0.1"
folium = "^0.19.4"
plotly = "^5.24.1"
nbformat = "^5.10.4"
streamlit-folium = "^0.24.0"
matplotlib = "^3.10.0"
boto3 = "^1.35.98"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
